Fix empty mesSorte/timeCoracao field